# YT

./: CMakeLists.txt  Delegate.ixx  Delegates.ixx  Drawer.ixx  Init.ixx  LICENSE  README.md  RenderReflect.ixx  RenderTypes.ixx  Types.ixx  Widget.ixx  Window.ixx  YT.ixx  main.cpp  vcpkg.json
Internal/: BitAllocator.ixx  BlockTable.ixx  DrawCombiner.ixx  Drawer.cpp  DrawerImpl.cpp  FixedBlockAllocator.ixx  InitImpl.cpp  JobManager.ixx  JobManagerImpl.cpp  QuadRender.ixx  QuadRenderImpl.cpp  RenderManager.cpp  RenderManager.ixx  RenderManagerImpl.cpp  RenderQuad.ixx  RenderQuadImpl.cpp  RenderReflectImpl.cpp  RenderTypes.ixx  ShaderBuilder.ixx  ThreadManager.ixx  TransientBuffer.ixx  Window.cpp  WindowImpl.cpp  WindowManager.cpp  WindowManager.ixx  WindowManagerImpl.cpp  WindowResource.ixx  WindowTable.ixx  WindowTypes.ixx  YTImpl.cpp
Shaders/: Screenspace.vert  TestFrag.frag  TestTriangle.vert  VertexColor.frag
Shaders/Quad/: Header.qfrag  Main.qfrag  Quad.qvert
Tests/: BitAllocatorTests.cpp  BlockTableTest.cpp  Empty.cpp  FixedBlockAllocatorTests.cpp  JobManagerTests.cpp
shaders/: TestFrag.frag
shaders/Quad/: Footer.qfrag  Header.qfrag  Main.qfrag  Quad.qvert
shaders/Structs/: DrawerData.h  GlobalData.h  IndexData.h  QuadData.h  QuadRenderData.h
src/: Types.ixx  YT.ixx  YTImpl.cpp
src/Allocators/: BitAllocator.ixx  BlockTable.ixx  FixedBlockAllocator.ixx  ObjectPool.ixx  ShelfAllocator2D.ixx
src/Buffer/: OwnedBuffer.ixx
src/Delegate/: Delegate.ixx
src/Font/: DeferredFontLoad.ixx  DeferredFontLoadImpl.cpp  FontLoad.cpp  FontLoad.ixx  FontManager.cpp  FontManager.ixx  FontManagerImpl.cpp  FontReference.ixx  FontReferenceImpl.cpp  FontTypes.ixx
src/Init/: Init.ixx  InitImpl.cpp
src/Job/: BackgroundTaskManager.ixx  BackgroundTaskManagerImpl.cpp  CoroEvent.ixx  Coroutine.ixx  CoroutineImpl.cpp  CoroutineImpl.ixx  FileMapper.ixx  FileMapperImpl.cpp  FileMapperImpl.ixx  JobManager.ixx  JobManagerImpl.cpp  JobTypes.ixx  Wait.ixx  WaitImpl.cpp  WaitImpl.h  WorkerThread.ixx  WorkerThreadQueue.ixx  WorkerThreadQueueImpl.cpp  WorkerThreadQueueImpl.ixx
src/Queues/: MultiProducerMultiConsumer.ixx  MultiProducerSingleConsumer.ixx  SingleProducerMultiConsumer.ixx  SingleProducerSingleConsumer.ixx
src/Render/: DeferredDelete.ixx  DeferredImageLoad.ixx  DeferredImageLoadImpl.cpp  Drawer.ixx  DrawerImpl.cpp  ImageBuffer.ixx  ImageLoad.cpp  ImageLoad.ixx  ImageReference.ixx  ImageReferenceImpl.cpp  OpaqueBuffer.ixx  QuadRender.ixx  QuadRenderImpl.cpp  RenderManager.ixx  RenderManagerImpl.cpp  RenderReflect.ixx  RenderReflectImpl.cpp  RenderTypes.ixx  STBI.cpp  ShaderBuilder.ixx  StagingBuffer.ixx  TransferManager.ixx  TransferManagerImpl.cpp  TransientBuffer.ixx  VMA.cpp
src/Widget/: Widget.ixx  WidgetRegistry.ixx
src/Window/: Window.ixx  WindowImpl.cpp  WindowManager.ixx  WindowManagerImpl.cpp  WindowResource.ixx  WindowTable.ixx  WindowTypes.ixx
tests/: DeferredDeleteTests.cpp  DelegateTests.cpp  JobManagerTests.cpp  MultiProducerMultiConsumerTests.cpp  MultiProducerSingleConsumerTests.cpp  ObjectPoolTests.cpp  ShelfAllocator2DTests.cpp  SingleProducerMultiConsumerTests.cpp  SingleProducerSingleConsumerTests.cpp
